[package]
name = "vlue"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.19.6"

[dependencies]
regex = "1.5.4"
clap = "2.33.3"

[dependencies.lalrpop-util]
version = "0.19.6"
features = ["lexer"]